search back is almost done
TODO:
first and last symbols shift in search
search page

--- a/coursework/mfc/templates/mfc/certificates.html
+++ b/coursework/mfc/templates/mfc/certificates.html
@@ -3,6 +3,9 @@
 {%block title%}{{ title }}{% endblock %}
 
 {% block content %}
+{% load static %}
+<link rel="stylesheet" href="{% static "mfc/css/scss/pages-styles/certificates/certificates.css" %}" />
+
 
 <section class="certificates">
     <h1 class="certificates__title">Справки</h1>
