--- a/coursework/static/mfc/css/scss/utils/_variables.scss
+++ b/coursework/static/mfc/css/scss/utils/_variables.scss
@@ -1,6 +1,7 @@
 //font
 $font-size-bold: 700;
 $font-size-medium: 600;
+$font-size-pre-medium: 500;
 $font-size-regular: 400;
 $font-size-light: 300;
 
