--- a/coursework/mfc/templates/mfc/index.html
+++ b/coursework/mfc/templates/mfc/index.html
@@ -18,7 +18,7 @@
 
 <body>
     <header class="header">
-        <div class="logo" href="{% url 'home' %}">
+        <div class="logo">
             <svg class="logo__svg" width="44" height="45" viewBox="0 0 44 45" fill="none"
                 xmlns="http://www.w3.org/2000/svg">
                 <rect width="44" height="44" rx="4" fill="#F8FAFA" />
