--- a/coursework/static/mfc/css/scss/blocks/_header.scss
+++ b/coursework/static/mfc/css/scss/blocks/_header.scss
@@ -46,7 +46,7 @@
 
 .header__search {
     height: 4.4rem;
-    width: 31.2rem;
+    width: 27.5rem;
     border: 0;
     border-radius: 3px;
     background-color: utils.$white-color;
@@ -58,7 +58,7 @@
 }
 
 .magnifier-svg {
-    position: absolute;
+    //position: absolute;
     right: 5.5rem;
 }
 
@@ -109,4 +109,12 @@
 .header__submit-button {
     width: 3.5rem;
     height: 3.5rem;
+    //display: block;
+
+    background-color: Transparent;
+    //background-repeat: no-repeat;
+    border: none;
+
+
 }
+
