--- a/coursework/mfc/templates/mfc/home.html
+++ b/coursework/mfc/templates/mfc/home.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 {% load static %}
-<link rel="stylesheet" href="{% static "mfc/css/scss/pages-styles/home/home.css" %}" />
+<link rel="stylesheet" href="{% static 'mfc/css/scss/pages-styles/home/home.css' %}" />
 
 
 <section class="main-article">
@@ -20,7 +20,12 @@
             </p>
             <a href="#" class="main-article__link">Подробнее</a>
             <!--ссылка на статью-->
-
+            <div class="wrapper-a">
+                <input type="radio" value="1" class="main-article__number-button" name="article_number" checked>
+                <input type="radio" value="2" class="main-article__number-button" name="article_number">
+                <input type="radio" value="3" class="main-article__number-button" name="article_number">
+                <input type="radio" value="4" class="main-article__number-button" name="article_number">
+            </div>
         </div>
         {%endfor%}
     </div>
