--- a/coursework/mfc/templates/mfc/certificates.html
+++ b/coursework/mfc/templates/mfc/certificates.html
@@ -14,7 +14,7 @@
         {% for certificate in certificatesList %}
 
         <li class="certificates__certificate-item">
-            <a href="#" class="certificates__certificate-link">
+            <a href="{% url 'show-certificate' certificate.certificate_id %}" class="certificates__certificate-link">
                 {{ certificate.name }}
             </a>
         </li>
