--- a/coursework/static/mfc/css/scss/pages-styles/home/_main-article.scss
+++ b/coursework/static/mfc/css/scss/pages-styles/home/_main-article.scss
@@ -12,6 +12,7 @@
     @include utils.main-wrapper;
     padding-top: 14rem;
     padding-bottom: 14rem;
+    //overflow: hidden;
 }
 
 
@@ -22,7 +23,7 @@
     object-fit: cover;
 }
 
-.main-article__link {
+.article__link {
     border: 0.05rem solid black;
     background-color: #FCFFFF;
     width: 16rem;
@@ -38,14 +39,14 @@
     margin-top: 3rem;
 }
 
-.main-article__title {
+.article__title {
     font-weight: utils.$font-size-bold;
     font-size: 2rem;
     line-height: 2.2rem;
     text-align: left;
 }
 
-.main-article__article-text {
+.article__article-text {
     margin-top: 1rem;
     font-weight: utils.$font-size-regular;
     font-size: 1.5rem;
@@ -55,7 +56,7 @@
 
 }
 
-.main-article__number-button {
+.article__number-button {
     appearance: none;
     height: 1rem;
     width: 1rem;
@@ -65,7 +66,7 @@
     transition: 1s;
 }
 
-.main-article__number-button:checked {
+.article__number-button:checked {
     width: 6rem;
     background-color: utils.$orange-color;
 }
