--- a/coursework/mfc/templates/mfc/index.html
+++ b/coursework/mfc/templates/mfc/index.html
@@ -6,8 +6,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static "mfc/css/default.css" %}" />
-    <link rel="stylesheet" href="{% static "mfc/css/scss/pages-styles/loginpage/loginpage.css" %}" />
+    <link rel="stylesheet" href="{% static 'mfc/css/default.css' %}" />
+    <link rel="stylesheet" href="{% static 'mfc/css/scss/pages-styles/loginpage/loginpage.css' %}" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -289,13 +289,13 @@
 
 
     <footer class="footer">
-        <img src="{% static "mfc/src/polytech-logo.png" %}" alt="Polytech logo">
-        <p class="footer__text--size_large">Курсовая работа второго семестра</p>
-        <p class="footer__text--size_small">Ахьямов Артур 211-321 <br> Май 2022 <br>akhyamovmp@gmail.com</p>
+        <img src="{% static 'mfc/src/polytech-logo.png' %}" alt="Polytech logo">
+        <p class="footer__text footer__text--size_large">Курсовая работа второго семестра</p>
+        <p class="footer__text footer__text--size_small">Ахьямов Артур 211-321 <br> Май 2022 <br>akhyamovmp@gmail.com</p>
     </footer>
 
-    <script src="{% static "mfc/js/jQuery.js" %}"></script>
-    <script src="{% static "mfc/js/transit.js" %}"></script>
+    <script src="{% static 'mfc/js/jQuery.js' %}"></script>
+    <script src="{% static 'mfc/js/transit.js' %}"></script>
 
     <script>
         $("#form-type-login").click(
