--- a/coursework/mfc/templates/mfc/template.html
+++ b/coursework/mfc/templates/mfc/template.html
@@ -246,8 +246,8 @@
 
     <footer class="footer">
         <img src="{% static 'mfc/src/polytech-logo.png' %}" alt="Polytech logo">
-        <p class="footer__text--size_large">Курсовая работа второго семестра</p>
-        <p class="footer__text--size_small">Ахьямов Артур 211-321 <br> Май 2022 <br>akhyamovmp@gmail.com</p>
+        <p class="footer__text footer__text--size_large">Курсовая работа второго семестра</p>
+        <p class="footer__text footer__text--size_small">Ахьямов Артур 211-321 <br> Май 2022 <br>akhyamovmp@gmail.com</p>
     </footer>
 </body>
 
