--- a/coursework/static/mfc/css/scss/pages-styles/home/home.css
+++ b/coursework/static/mfc/css/scss/pages-styles/home/home.css
@@ -368,6 +368,17 @@ html {
   margin: 0 auto;
   padding-top: 14rem;
   padding-bottom: 14rem;
+  position: relative;
+}
+
+.main-article__buttons-wrapper {
+  position: absolute;
+  bottom: 8rem;
+}
+
+.article {
+  transition: 0.5s;
+  height: 37rem;
 }
 
 .article__image {
