--- a/coursework/static/mfc/css/default.css
+++ b/coursework/static/mfc/css/default.css
@@ -362,27 +362,19 @@ html {
   flex-direction: column;
   align-items: center;
   justify-content: space-evenly;
-  position: absolute;
-  bottom: 0;
-  width: 100%;
 }
 
+.footer__text {
+  color: #F8FAFA;
+  text-align: center;
+}
 .footer__text--size_large {
   font-size: 3.2rem;
   font-weight: 400;
-  color: #F8FAFA;
-  text-align: center;
 }
-
 .footer__text--size_small {
   font-size: 2rem;
   font-weight: 300;
-  text-align: center;
-  color: #F8FAFA;
-}
-
-body {
-  min-height: 100vh;
 }
 
 .header {
