--- a/coursework/static/mfc/css/scss/pages-styles/home/_main-article.scss
+++ b/coursework/static/mfc/css/scss/pages-styles/home/_main-article.scss
@@ -17,6 +17,9 @@
 }
 
 .main-article__buttons-wrapper {
+    -moz-user-select: none;
+    -khtml-user-select: none;
+    user-select: none;
     position: absolute;
     bottom: 8rem;
 }
