--- a/coursework/static/mfc/css/scss/pages-styles/loginpage/_login-form.scss
+++ b/coursework/static/mfc/css/scss/pages-styles/loginpage/_login-form.scss
@@ -1,6 +1,6 @@
 @use "../../utils";
 
-.login-form-wrapper {
+.login-form {
 
     @include utils.wrapper;
 
@@ -41,11 +41,12 @@
     position: absolute;
     max-width: 36rem;
     width: 100%;
-
+/*
     &--type-registration {
         transform: rotate(90deg);
         display: none;
     }
+*/
 }
 
 .form__title {
@@ -83,6 +84,20 @@
 
 }
 
+input {
+    padding: 0;
+    padding-left: 4rem;
+    font-family: 'Poppins';
+    font-weight: utils.$font-size-regular;
+    font-size: 1.2rem;
+    border: 0;
+    border-radius: 0.5rem;
+    background-color: white;
+    max-width: 38rem;
+    width: 100%;
+    height: 3.3rem;
+    color: #203060;
+}
 
 .form__input--radio:checked {
     width: 5rem;
